minor(auth): added logout
